# AI-Journalist

./: .dockerignore  .env.example  .gitignore  AGENT_SYSTEM_GUIDE.md  AGENT_SYSTEM_PROMPTS.docx  AGENT_SYSTEM_PROMPTS.md  AI_Journalist_Architecture.docx  README.md  ai_journalist_cost_model.xls  alembic.ini  cost_model_assumptions.md  cost_model_per_script.csv  docker-compose.yml  fly.backend.toml  fly.frontend.toml  fly.toml  pyproject.toml  requirements-dev.txt
.github/workflows/: fly-deploy.yml
backend/: Dockerfile  __init__.py  config.py  requirements.txt
backend/agents/: __init__.py  analyst.py  benchmarker.py  corpus_builder.py  evaluator.py  focused_researcher.py  researcher.py  script_evaluator.py  script_rewriter.py  scriptwriter.py  storyline_creator.py
backend/api/: deps.py  main.py  security.py
backend/data/: bi_patterns.json  cnbc_patterns.json  jh_patterns.json  vox_patterns.json
backend/db/: __init__.py  database.py
backend/graph/: __init__.py  journalist_graph.py  state.py
backend/migrations/: env.py
backend/models/: __init__.py  benchmark.py  research.py  story.py  user.py
backend/scripts/: build_corpus.py
backend/services/: benchmarking.py  script_storage.py
backend/tools/: __init__.py  financial_data.py  news_api.py  rss_parser.py  web_scraper.py  web_search.py  youtube_fetcher.py
design-system/figma-simple-design-system/: README.md  components.json  frontend-mapping.json  source.json  tokens.json
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AuthGuard.tsx  LogoutButton.tsx  ScriptViewer.tsx  Sidebar.tsx  SidebarWrapper.tsx  StoryCard.tsx
frontend/lib/: api.ts  auth.ts  design-fixtures.ts  script-export.ts
scripts/: fly-deploy.sh  localstack-init.sh
tests/: conftest.py
tests/integration/: test_api.py
(+32 files in other folders)
